fixed left alignment of components to 240px

--- a/assets/scss/components/about.scss
+++ b/assets/scss/components/about.scss
@@ -3,7 +3,7 @@
         position: absolute;
         width: 645px;
         height: 464px;
-        left: 100px;
+        left: 240px;
         top: 237px;
         
         
@@ -48,7 +48,7 @@
     position: absolute;
     max-width: 885px;
     height: 468px;
-    left: 503px;
+    left: 603px;
     top: 333px;
     
 }
